Add Gemini first reply workflow for new issues
Introduces a new reusable workflow, gemini-first-reply.yml, to automatically post a welcoming and helpful first comment on newly created issues. Updates gemini-dispatch.yml to trigger this workflow when the 'triage' command is detected, improving the initial response experience for issue authors.

--- a/.github/workflows/gemini-dispatch.yml
+++ b/.github/workflows/gemini-dispatch.yml
@@ -202,3 +202,10 @@ jobs:
           gh issue comment "${ISSUE_NUMBER}" \
             --body "${MESSAGE}" \
             --repo "${REPOSITORY}"
+
+  first-reply:
+    needs: 'dispatch'
+    if: |-
+      ${{ needs.dispatch.outputs.command == 'triage' }}
+    uses: './.github/workflows/gemini-first-reply.yml'
+    secrets: 'inherit'
