--- a/.github/workflows/gemini-dispatch.yml
+++ b/.github/workflows/gemini-dispatch.yml
@@ -208,4 +208,9 @@ jobs:
     if: |-
       ${{ needs.dispatch.outputs.command == 'triage' }}
     uses: './.github/workflows/gemini-first-reply.yml'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      issues: 'write'
+      pull-requests: 'write'
     secrets: 'inherit'
