--- a/.github/workflows/gemini-first-reply.yml
+++ b/.github/workflows/gemini-first-reply.yml
@@ -61,10 +61,11 @@ jobs:
               },
               "mcpServers": {
                 "github": {
-                  "command": "docker",
-                  "args": [ "run", "-i", "--rm", "-e", "GITHUB_PERSONAL_ACCESS_TOKEN", "ghcr.io/github/github-mcp-server" ],
-                  "includeTools": [ "add_issue_comment" ],
-                  "env": { "GITHUB_PERSONAL_ACCESS_TOKEN": "${{ env.GITHUB_TOKEN }}" }
+                  "httpUrl": "https://api.githubcopilot.com/mcp/",
+                  "trust": true,
+                  "headers": {
+                    "Authorization": "Bearer $GITHUB_TOKEN"
+                  }
                 }
               },
               "coreTools": ["run_shell_command(echo)"]
