--- a/.github/workflows/gemini-first-reply.yml
+++ b/.github/workflows/gemini-first-reply.yml
@@ -50,8 +50,7 @@ jobs:
           use_vertex_ai: '${{ vars.GOOGLE_GENAI_USE_VERTEXAI }}'
           google_api_key: '${{ secrets.GOOGLE_API_KEY }}'
           use_gemini_code_assist: '${{ vars.GOOGLE_GENAI_USE_GCA }}'
-          gemini_debug: true
-          #gemini_debug: '${{ fromJSON(vars.DEBUG || vars.ACTIONS_STEP_DEBUG || false) }}'
+          gemini_debug: '${{ fromJSON(vars.DEBUG || vars.ACTIONS_STEP_DEBUG || false) }}'
           settings: |-
             {
               "maxSessionTurns": 5,
@@ -61,13 +60,13 @@ jobs:
               },
               "mcpServers": {
                 "github": {
-                  "httpUrl": "https://api.githubcopilot.com/mcp/",
-                  "trust": true,
-                  "headers": {
-                    "Authorization": "Bearer $GITHUB_TOKEN"
-                  }
+                  "command": "docker",
+                  "args": [ "run", "-i", "--rm", "-e", "GITHUB_PERSONAL_ACCESS_TOKEN", "ghcr.io/github/github-mcp-server" ],
+                  "includeTools": [ "add_issue_comment" ],
+                  "env": { "GITHUB_PERSONAL_ACCESS_TOKEN": "${GITHUB_TOKEN}" }
                 }
-              }
+              },
+              "coreTools": ["run_shell_command(echo)"]
             }
           prompt: |-
             ## Role
