Update workflow permissions for Gemini actions
Added 'contents: read' and 'pull-requests: write' permissions to both gemini-dispatch and gemini-greeting workflows. Also updated the 'mint_identity_token' step to explicitly set these permissions. This change ensures the workflows have the necessary access for operations involving pull requests and repository contents.

--- a/.github/workflows/gemini-dispatch.yml
+++ b/.github/workflows/gemini-dispatch.yml
@@ -129,8 +129,10 @@ jobs:
       needs.dispatch.outputs.command == 'triage'
     uses: './.github/workflows/gemini-greeting.yml'
     permissions:
-      issues: 'write'
+      contents: 'read'
       id-token: 'write'
+      issues: 'write'
+      pull-requests: 'write'
     secrets:
       APP_PRIVATE_KEY: '${{ secrets.APP_PRIVATE_KEY }}'
       GEMINI_API_KEY: '${{ secrets.GEMINI_API_KEY }}'
