--- a/.github/workflows/gemini-greeting.yml
+++ b/.github/workflows/gemini-greeting.yml
@@ -20,8 +20,10 @@ jobs:
   greet:
     runs-on: 'ubuntu-latest'
     permissions:
+      contents: 'read'
       issues: 'write'
       id-token: 'write'
+      pull-requests: 'write'
     steps:
       - name: 'Mint identity token'
         id: 'mint_identity_token'
@@ -31,7 +33,9 @@ jobs:
         with:
           app-id: '${{ vars.APP_ID }}'
           private-key: '${{ secrets.APP_PRIVATE_KEY }}'
+          permission-contents: 'read'
           permission-issues: 'write'
+          permission-pull-requests: 'write'
 
       - name: 'Generate and Post Greeting using MCP'
         uses: 'google-github-actions/run-gemini-cli@v0' # ratchet:exclude
